--- a/templates/views/weather.hbs
+++ b/templates/views/weather.hbs
@@ -12,7 +12,7 @@ const search = document.querySelector('input');
 weatherForm.addEventListener('submit', (e) => {
   e.preventDefault();
   const location = search.value;
-  fetch('http://localhost:3000/weather_forecast?address=' + location).then((response) => {
+  fetch('https://localhost:3000/weather_forecast?address=' + location).then((response) => {
     response.json().then((data) => {
       if (data.error) {
         console.log(data.error)
