--- a/templates/views/weather.hbs
+++ b/templates/views/weather.hbs
@@ -1,31 +1,11 @@
-<form>
+<body>
+  <form>
     <input placeholder="Location">
     <button>Search</button>
-</form>
+  </form>
 
-<p id="location"></p>
-<p id="forecast"></p>
+  <p id="location"></p>
+  <p id="forecast"></p>
 
-<script>
-const weatherForm = document.querySelector('form');
-const search = document.querySelector('input');
-weatherForm.addEventListener('submit', (e) => {
-  e.preventDefault();
-  const location = search.value;
-  fetch('https://localhost:3000/weather_forecast?address=' + location, {mode: 'no-cors'}).then((response) => {
-    response.json().then((data) => {
-      if (data.error) {
-        console.log(data.error)
-      } else {
-        console.log(data.location)
-        console.log(data.forecast)
-
-        const pLocation = document.querySelector('#location');
-        const pForecast = document.querySelector('#forecast');
-        pLocation.textContent = 'Location: ' + data.location;
-        pForecast.textContent = 'Forecast: ' + data.forecast;
-      }
-    })
-  });
-});
-</script>
+  <script src="/js/app.js"></script>
+</body>
